--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "with-tailwindcss",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://yudi.live/ip-address-tracker",
   "scripts": {
+    "predeploy": "npm run export",
+    "deploy": "gh-pages -d out",
     "dev": "next dev",
+    "preexport": "npm run build",
+    "export": "next export",
     "build": "next build",
     "start": "next start"
   },
@@ -20,6 +25,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gh-pages": "^3.2.0",
     "postcss": "^8.1.10",
     "tailwindcss": "^2.1.1"
   }
