change ip address api add error message fix 404 asset on production

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-tailwindcss",
+  "name": "ip-address-tracker",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://yudi.live/ip-address-tracker",
