update homepage property in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ip-address-tracker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yudi.live/ip-address-tracker",
+  "homepage": "addr.netlify.app",
   "scripts": {
     "dev": "next dev",
     "preexport": "npm run build",
